--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,30 @@ img{
 }
 /* LAYOUT*/
 .container{
-  max-width: 1024px;
+  max-width: auto;
   padding: 1rem;
   margin: 0 auto;
+  background-color: #f5f5f5;
+  
+}
+.btn{
+  display: block;
+  background-color: #ffa500;
+  color: white;
+  border: none;
+  padding: 10px 15px;
+  cursor: pointer;
+}
+
+.title-header{
+  margin-bottom: 20px;
+  font-size: 2rem;
+  text-align: center ;
+}
+
+.page-footer{
+  background-color: #666;
+  font-size: 0.8rem;
+  margin: auto;
+  padding: 50px;
 }
